--- a/style.css
+++ b/style.css
@@ -5,18 +5,35 @@
 }
 
 nav {
-    background-color: #fdf0d562;
+    background-color: #D3D3D3;
     overflow: hidden;
+}
+
+nav hr {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    border-top: 1px solid #C6D8D3;
 }
 
 nav a {
     display: inline;
-    padding: 14px 20px;
+    padding: 10px 15px;
     text-decoration: none;
     color: #3A3335;
     font-size: 17px;
     float: right;
     font-family: 'Roboto', sans-serif;
+    border: 1px solid #C6D8D3;
+    border-radius: 5px;
+    margin: 7px;
+    transition: 0.3s;
+}
+
+nav a:hover {
+    background-color: #FDF0D5;
+    color: #fff;
+    transition: 0.3s;
 }
 
 ul {
@@ -28,13 +45,74 @@ ul {
 
 nav a:hover {
     transition: 0.3s;
-    color: hsla(343, 7%, 21%, 0.617);
+    color: hsl(343, 7%, 21%);
 }
 
 .container {
-    width: 80%;
-    margin-top: 15px;
-    overflow: hidden;
-    display: block;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+}
+.card {
+    margin-top: 10px;
+    display: flex;
     align-items: center;
+    background-color: #f9f9f9;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    overflow: hidden;
+    transition: 0.3s;
+}
+
+.card:hover {
+    transform: scale(1.02);
+    transition: 0.3s;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+.card img {
+    width: 210px;
+    height: 250px;
+    border-radius: 2%;
+    object-fit: cover;
+    margin-right: 20px;
+}
+
+.card-content {
+    flex: 1;
+}
+
+.card-content p {
+    font-size: 18px;
+    color: #555;
+    line-height: 1.6;
+}
+
+strong {
+    color: #333;
+    font-weight: bold;
+}
+
+.social-links {
+    margin-top: 20px;
+}
+
+.social-links a {
+    display: inline-block;
+    margin-right: 10px;
+    color: #F0544F;
+    font-size: 20px;
+    padding: 5px;
+    text-decoration: none;
+    border: 2px solid #F0544F;
+    border-radius: 25px;
+    transition: all 0.3s ease;
+}
+
+.social-links a:hover {
+    background-color: #F0544F;
+    color: #fff;
 }
