--- a/html-content/style.css
+++ b/html-content/style.css
@@ -233,7 +233,7 @@ footer p {
 
 .container_ h2 {
     font-size: 1.2rem;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     color: #333;
 }
 
@@ -279,4 +279,21 @@ footer p {
     flex: 1;
     justify-items: left;
     text-align: left;
+}
+
+.container_ .card-content a {
+    text-decoration: none;
+    color: #333;
+    font-size: 18px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    font-weight: bold;
+    transition: 0.3s;
+    display: inline-block;
+}
+
+.container_ .card-content a:hover {
+    background-color: #0056b3;
 }
